--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 						<div class="profile-text">
 							<h1 class="profile-name">g. haruo</h1>
 							<p class="profile-description">
-								tudo que vejo
-								são formas e cores.
+								tudo que vejo são formas e cores.
 							</p>
 						</div>
 					</div>
@@ -76,48 +75,87 @@
 			<main class="main-content">
 				<div class="content-section active" id="musicas">
 					<h2>Músicas</h2>
-					<p>Composições autorais e experimentos sonoros.</p>
-					<div class="release-item">
-						<div class="release-cover">
-							<div class="cover-placeholder green"></div>
+					<p>
+						Algumas das minhas composições autorais. Todas elas foram pensadas e
+						produzidas no pequeno estúdio improvisado do meu próprio quarto.
+						Colchões cobrindo as portas, paredes e janelas são cenas bem comuns
+						por aqui. São essas gambiarras que dão vida à arte.
+					</p>
+					<div class="albums-grid">
+						<div class="release-item">
+							<div class="release-cover">
+								<img
+									src="assets/a_deriva-capa.png"
+									alt="à deriva capa"
+									class="release-img"
+								/>
+							</div>
+							<div class="release-info">
+								<h3>à deriva (Single)</h3>
+								<p>
+									Violão de nylon solo capturado com um simples microfone
+									dinâmico. Processado com síntese granular.
+								</p>
+							</div>
 						</div>
-						<div class="release-info">
-							<h3>à deriva (single)</h3>
-							<p>
-								Violão de nylon solo capturado com um simples microfone
-								dinâmico. Processado com síntese granular.
-							</p>
-						</div>
-					</div>
 
-					<div class="release-item">
-						<div class="release-cover">
-							<div class="cover-placeholder black"></div>
-						</div>
-						<div class="release-info">
-							<h3>Imensidão, Pt. 1 (EP)</h3>
-							<p>
-								Trilha sonora interestelar. Feito exclusivamente com síntese
-								sonora e efeitos digitais.
-							</p>
+						<div class="release-item">
+							<div class="release-cover">
+								<img
+									src="assets/imensidao-capa.png"
+									alt="Imensidão, Pt. 1 capa"
+									class="release-img"
+								/>
+							</div>
+							<div class="release-info">
+								<h3>Imensidão, Pt. 1 (EP)</h3>
+								<p>
+									Trilha sonora interestelar. Feito exclusivamente com síntese
+									sonora e efeitos digitais.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="content-section" id="eletronicos">
 					<h2>Eletrônicos</h2>
-					<p>Projetos de música eletrônica e sound design.</p>
+					<p>
+						Minhas contribuições na produção de sintetizadores, pedais de
+						efeitos e outros dispositivos eletrônicos. Sou eternamente grato,
+						principalmente ao Vinícius Fernandes, da Menis, e ao Filipe Alberti,
+						da Beetronics, por terem me ensinado esses conhecimentos valiosos.
+					</p>
 					<div class="project-grid">
 						<div class="project-item">
-							<h3>Síntese Granular</h3>
+							<div
+								style="
+									display: flex;
+									flex-direction: column;
+									align-items: center;
+								"
+							>
+								<img
+									src="assets/mangione_nobg.png"
+									alt="Menis Mangione MFX"
+									style="max-width: 220px; margin-bottom: 12px"
+								/>
+								<h3>Menis Mangione MFX</h3>
+							</div>
 							<p>
-								Experimentos com texturas sonoras através de síntese granular.
+								Um pedal de guitarra multiefeito digital robusto, construído com
+								o MCU Daisy Seed. Ele oferece uma distorção peculiar, baseada em
+								wavefolding, redução de sample rate e um delay com LFO.
 							</p>
 						</div>
 						<div class="project-item">
-							<h3>Ambient Soundscapes</h3>
+							<h3>Menis Dub Siren (em produção)</h3>
 							<p>
-								Paisagens sonoras ambientais criadas com processamento digital.
+								Um sintetizador digital minúsculo, mas poderoso, construído com
+								o MCU Daisy Seed. Ele reinventa as clássicas sirenes do Dub
+								Reggae. A combinação de 8 LFOs, um filtro ressonante com
+								frequência de corte variável e controle de decay e pitch
+								possibilita uma gama abrangente de timbres.
 							</p>
 						</div>
 					</div>
