--- a/index.html
+++ b/index.html
@@ -39,16 +39,46 @@
 				</div>
 
 				<div class="social-icons">
-					<a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-					<a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
-					<a href="#" class="social-icon"><i class="fab fa-spotify"></i></a>
-					<a href="#" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+					<a
+						href="https://github.com/haruo-gabriel"
+						class="social-icon"
+						target="_blank"
+						rel="noopener"
+						><i class="fab fa-github"></i
+					></a>
+					<a
+						href="https://soundcloud.com/haruooo"
+						class="social-icon"
+						target="_blank"
+						rel="noopener"
+						><i class="fab fa-soundcloud"></i
+					></a>
+					<!-- <a href="#" class="social-icon"><i class="fab fa-spotify"></i></a> -->
+					<a
+						href="https://www.instagram.com/_haru.o/"
+						class="social-icon"
+						target="_blank"
+						rel="noopener"
+						><i class="fab fa-instagram"></i
+					></a>
+					<a
+						href="https://www.youtube.com/@haruo_h/videos"
+						class="social-icon"
+						target="_blank"
+						rel="noopener"
+						><i class="fab fa-youtube"></i
+					></a>
 				</div>
 
 				<nav class="main-nav">
 					<ul>
 						<li>
-							<a href="#" class="nav-item active" data-section="musicas"
+							<a href="#" class="nav-item active" data-section="sobre-mim"
+								>sobre mim</a
+							>
+						</li>
+						<li>
+							<a href="#" class="nav-item" data-section="musicas"
 								>músicas</a
 							>
 						</li>
@@ -73,8 +103,13 @@
 
 			<!-- Main Content -->
 			<main class="main-content">
-				<div class="content-section active" id="musicas">
-					<h2>Músicas</h2>
+				<div class="content-section active" id="sobre-mim">
+					<h2>sobre mim</h2>
+                    <p>Um pequeno portfolio geral de projetos que fiz e ando fazendo.</p>
+				</div>
+
+				<div class="content-section" id="musicas">
+					<h2>músicas</h2>
 					<p>
 						Algumas das minhas composições autorais. Todas elas foram pensadas e
 						produzidas no pequeno estúdio improvisado do meu próprio quarto.
@@ -119,12 +154,12 @@
 				</div>
 
 				<div class="content-section" id="eletronicos">
-					<h2>Eletrônicos</h2>
+					<h2>eletrônicos</h2>
 					<p>
 						Minhas contribuições na produção de sintetizadores, pedais de
 						efeitos e outros dispositivos eletrônicos. Sou eternamente grato,
-						principalmente ao Vinícius Fernandes, da Menis, e ao Filipe Alberti,
-						da Beetronics, por terem me ensinado esses conhecimentos valiosos.
+						principalmente ao Vinícius Fernandes, da <a href="https://www.instagram.com/menis______/" target="_blank" rel="noopener">Menis</a>, e ao Filipe Alberti,
+						da <a href="https://www.instagram.com/beetronics/" target="_blank" rel="noopener">Beetronics</a>, por terem me ensinado esses conhecimentos valiosos.
 					</p>
 					<div class="project-grid">
 						<div class="project-item">
@@ -138,6 +173,7 @@
 								<img
 									src="assets/mangione_nobg.png"
 									alt="Menis Mangione MFX"
+									class="release-img"
 									style="max-width: 220px; margin-bottom: 12px"
 								/>
 								<h3>Menis Mangione MFX</h3>
@@ -162,37 +198,41 @@
 				</div>
 
 				<div class="content-section" id="softwares">
-					<h2>Softwares</h2>
-					<p>Ferramentas e aplicações desenvolvidas para criação musical.</p>
+					<h2>softwares</h2>
+					<p>Instrumentos e interfaces musicais digitais.</p>
 					<div class="project-grid">
 						<div class="project-item">
-							<h3>Audio Processor</h3>
-							<p>Plugin de processamento de áudio em tempo real.</p>
+							<h3>Condusom</h3>
+							<p>
+								Desenvolvido em python, Condusom é um sintetizador digital
+								controlado pela webcam. Mostre a sua mão para a câmera e conduza
+								o som com gestos e movimentos precisos.
+							</p>
 						</div>
 						<div class="project-item">
-							<h3>MIDI Controller</h3>
-							<p>
-								Interface personalizada para controle de parâmetros sonoros.
-							</p>
+							<h3></h3>
+							<p></p>
 						</div>
 					</div>
 				</div>
 
 				<div class="content-section" id="pesquisas">
-					<h2>Pesquisas</h2>
+					<h2>pesquisas</h2>
 					<p>
-						Investigações acadêmicas e experimentais em música e tecnologia.
+						Investigações acadêmicas em música e tecnologia.
 					</p>
 					<div class="project-grid">
 						<div class="project-item">
-							<h3>Música Algorítmica</h3>
-							<p>Estudo sobre composição assistida por computador.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 						<div class="project-item">
-							<h3>Espacialização Sonora</h3>
-							<p>Pesquisa em áudio 3D e ambientes imersivos.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 					</div>
+				</div>
+
 				</div>
 			</main>
 		</div>
