--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 						Colchões cobrindo as portas, paredes e janelas são cenas bem comuns
 						por aqui. São essas gambiarras que dão vida à arte.
 					</p>
-					<div class="albums-grid">
-						<div class="release-item">
-							<div class="release-cover">
+					<div class="project-grid">
+						<div class="project-item">
+							<div class="project-cover">
 								<img
 									src="assets/a_deriva-capa.png"
 									alt="à deriva capa"
-									class="release-img"
+									class="project-img"
 								/>
 							</div>
-							<div class="release-info">
+							<div>
 								<h3>à deriva (Single)</h3>
 								<p>
 									Violão de nylon solo capturado com um simples microfone
@@ -134,15 +134,15 @@
 							</div>
 						</div>
 
-						<div class="release-item">
-							<div class="release-cover">
+						<div class="project-item">
+							<div class="project-cover">
 								<img
 									src="assets/imensidao-capa.png"
 									alt="Imensidão, Pt. 1 capa"
-									class="release-img"
+									class="project-img"
 								/>
 							</div>
-							<div class="release-info">
+							<div>
 								<h3>Imensidão, Pt. 1 (EP)</h3>
 								<p>
 									Trilha sonora interestelar. Feito exclusivamente com síntese
@@ -163,36 +163,34 @@
 					</p>
 					<div class="project-grid">
 						<div class="project-item">
-							<div
-								style="
-									display: flex;
-									flex-direction: column;
-									align-items: center;
-								"
-							>
+							<div class="project-cover">
 								<img
 									src="assets/mangione_nobg.png"
 									alt="Menis Mangione MFX"
-									class="release-img"
-									style="max-width: 220px; margin-bottom: 12px"
+									class="project-img"
 								/>
-								<h3>Menis Mangione MFX</h3>
 							</div>
-							<p>
-								Um pedal de guitarra multiefeito digital robusto, construído com
-								o MCU Daisy Seed. Ele oferece uma distorção peculiar, baseada em
-								wavefolding, redução de sample rate e um delay com LFO.
-							</p>
+							<div>
+								<h3>Menis Mangione MFX</h3>
+								<p>
+									Um pedal de guitarra multiefeito digital robusto, construído com
+									o MCU Daisy Seed. Ele oferece uma distorção peculiar, baseada em
+									wavefolding, redução de sample rate e um delay com LFO.
+								</p>
+							</div>
 						</div>
 						<div class="project-item">
-							<h3>Menis Dub Siren (em produção)</h3>
-							<p>
-								Um sintetizador digital minúsculo, mas poderoso, construído com
-								o MCU Daisy Seed. Ele reinventa as clássicas sirenes do Dub
-								Reggae. A combinação de 8 LFOs, um filtro ressonante com
-								frequência de corte variável e controle de decay e pitch
-								possibilita uma gama abrangente de timbres.
-							</p>
+							<p id="big-interrogation">?</p>
+							<div>
+								<h3>Menis Dub Siren (em produção)</h3>
+								<p>
+									Um sintetizador digital minúsculo, mas poderoso, construído com
+									o MCU Daisy Seed. Ele reinventa as clássicas sirenes do Dub
+									Reggae. A combinação de 8 LFOs, um filtro ressonante com
+									frequência de corte variável e controle de decay e pitch
+									possibilita uma gama abrangente de timbres.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
