--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
 							<div>
 								<h3>à deriva (Single)</h3>
 								<p>
-									Violão de nylon solo capturado com um simples microfone
-									dinâmico. Processado com síntese granular.
+									Violão de nylon solo capturado com um simples microfone dinâmico.
+                                    Processado com síntese granular.
+                                    <br>
+                                    Ouça pelo <a href="https://on.soundcloud.com/mMu3KjopwNd7j9r0od" target="_blank" rel="noopener">Soundcloud</a>.
 								</p>
 							</div>
 						</div>
@@ -147,6 +149,8 @@
 								<p>
 									Trilha sonora interestelar. Feito exclusivamente com síntese
 									sonora e efeitos digitais.
+                                    <br>
+                                    Ouça pelo <a href="https://on.soundcloud.com/7FRyd7Ypc0UvA7Wl0s" target="_blank" rel="noopener">Soundcloud</a>.
 								</p>
 							</div>
 						</div>
