--- a/index.html
+++ b/index.html
@@ -209,11 +209,17 @@
 								Desenvolvido em python, Condusom é um sintetizador digital
 								controlado pela webcam. Mostre a sua mão para a câmera e conduza
 								o som com gestos e movimentos precisos.
+                                <br>
+                                Acesse pelo <a href="https://github.com/uspaudiotech/condusom" target="_blank" rel="noopener">Github</a>.
 							</p>
 						</div>
 						<div class="project-item">
-							<h3></h3>
-							<p></p>
+							<h3>Do Zero ao Som: Criando Áudio Digital com Python</h3>
+							<p>
+                                Um breve material em Jupyter Notebook destinado para o workshop sobre síntese sonora digital do grupo de extensão acadêmico USPAudioTech.
+                                <br>
+                                Acesse pelo <a href="https://github.com/uspaudiotech/workshop-sintese" target="_blank" rel="noopener">Github</a>.
+                            </p>
 						</div>
 					</div>
 				</div>
