resize and realign navbar

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 				<div class="content-section" id="softwares">
 					<h2>softwares</h2>
-					<p>Instrumentos e interfaces musicais digitais.</p>
+					<p>Instrumentos e interfaces de expressões musicais digitais.</p>
 					<div class="project-grid">
 						<div class="project-item">
 							<h3>Condusom</h3>
