refining spacings between project items

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 				<div class="content-section active" id="sobre-mim">
 					<h2>sobre mim</h2>
                     <p>Um pequeno portfolio geral de projetos que fiz e ando fazendo.</p>
+                    <p>TODO: escrever algo interessante aqui.</p>
 				</div>
 
 				<div class="content-section" id="musicas">
