--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<main class="main-content">
 				<div class="content-section active" id="sobre-mim">
 					<h2>sobre mim</h2>
-                    <p>Um pequeno portfolio geral de projetos que fiz e ando fazendo.</p>
+                    <p>Um pequeno portfolio digital de projetos que fiz e ando fazendo.</p>
                     <p>TODO: escrever algo interessante aqui.</p>
 				</div>
 
