--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
 					<p>Instrumentos e interfaces de expressões musicais digitais.</p>
 					<div class="project-grid">
 						<div class="project-item">
+							<div class="project-cover">
+								<img src="assets/placeholder.png" alt="Placeholder image" class="project-img" />
+							</div>
+							<div>
 							<h3>Condusom</h3>
 							<p>
 								Desenvolvido em python, Condusom é um sintetizador digital
@@ -213,14 +217,20 @@
                                 <br>
                                 Acesse pelo <a href="https://github.com/uspaudiotech/condusom" target="_blank" rel="noopener">Github</a>.
 							</p>
+							</div>
 						</div>
 						<div class="project-item">
+							<div class="project-cover">
+								<img src="assets/placeholder.png" alt="Placeholder image" class="project-img" />
+							</div>
+							<div>
 							<h3>Do Zero ao Som: Criando Áudio Digital com Python</h3>
 							<p>
                                 Um breve material em Jupyter Notebook destinado para o workshop sobre síntese sonora digital do grupo de extensão acadêmico USPAudioTech.
                                 <br>
                                 Acesse pelo <a href="https://github.com/uspaudiotech/workshop-sintese" target="_blank" rel="noopener">Github</a>.
                             </p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -230,6 +240,7 @@
 					<p>
 						Investigações acadêmicas em música e tecnologia.
 					</p>
+					<p>Ainda com preguiça de preencher.</p>
 					<div class="project-grid">
 						<div class="project-item">
 							<h3></h3>
