--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 							>
 						</li>
 						<li>
+							<a href="#" class="nav-item" data-section="textos"
+								>textos</a
+							>
+						</li>
+						<li>
 							<a href="#" class="nav-item" data-section="eletronicos"
 								>eletrônicos</a
 							>
@@ -109,6 +114,7 @@
                     <p>TODO: escrever algo interessante aqui.</p>
 				</div>
 
+				<!-- MUSICAS -->
 				<div class="content-section" id="musicas">
 					<h2>músicas</h2>
 					<p>
@@ -136,7 +142,6 @@
 								</p>
 							</div>
 						</div>
-
 						<div class="project-item">
 							<div class="project-cover">
 								<img
@@ -157,7 +162,36 @@
 						</div>
 					</div>
 				</div>
+				<!-- MUSICAS -->
 
+				<!-- TEXTOS -->
+				<div class="content-section" id="textos">
+					<h2>textos</h2>
+					<p>
+						Alguns pequenos resultados que construí com palavras. E que não são códigos.
+					</p>
+					<div class="project-grid">
+						<div class="project-item">
+							<div class="project-paper" data-poem="distancia">
+								<div class="paper-title">Distância</div>
+								<div class="paper-preview">
+									Carregando...
+								</div>
+							</div>
+							<div>
+								<h3>Distância</h3>
+								<p>tag: poema</p>
+							</div>
+						</div>
+						<div class="project-item">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<!-- TEXTOS -->
+
+				<!-- ELETRONICOS -->
 				<div class="content-section" id="eletronicos">
 					<h2>eletrônicos</h2>
 					<p>
@@ -199,11 +233,12 @@
 						</div>
 					</div>
 				</div>
+				<!-- ELETRONICOS -->
 
+				<!-- SOFTWARES -->
 				<div class="content-section" id="softwares">
 					<h2>softwares</h2>
-					<p>Instrumentos e interfaces de expressões musicais digitais.</p>
-					<div class="project-grid">
+					<p>Instrumentos e interfaces de expressões musicais digitais.</p> <div class="project-grid">
 						<div class="project-item">
 							<div class="project-cover">
 								<img src="assets/placeholder.png" alt="Placeholder image" class="project-img" />
@@ -234,7 +269,9 @@
 						</div>
 					</div>
 				</div>
+				<!-- SOFTWARES -->
 
+				<!-- PESQUISAS -->
 				<div class="content-section" id="pesquisas">
 					<h2>pesquisas</h2>
 					<p>
@@ -252,6 +289,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- PESQUISAS -->
 
 				</div>
 			</main>
