--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
 			rel="stylesheet"
@@ -24,7 +24,7 @@
 					<div class="profile-row">
 						<div class="profile-image">
 							<img
-								src="assets/pfp.png"
+								src="assets/images/pfp.png"
 								alt="profile picture"
 								class="profile-pic"
 							/>
@@ -127,7 +127,7 @@
 						<div class="project-item">
 							<div class="project-cover">
 								<img
-									src="assets/a_deriva-capa.png"
+									src="assets/images/a_deriva-capa.png"
 									alt="à deriva capa"
 									class="project-img"
 								/>
@@ -145,7 +145,7 @@
 						<div class="project-item">
 							<div class="project-cover">
 								<img
-									src="assets/imensidao-capa.png"
+									src="assets/images/imensidao-capa.png"
 									alt="Imensidão, Pt. 1 capa"
 									class="project-img"
 								/>
@@ -204,7 +204,7 @@
 						<div class="project-item">
 							<div class="project-cover">
 								<img
-									src="assets/mangione_nobg.png"
+									src="assets/images/mangione_nobg.png"
 									alt="Menis Mangione MFX"
 									class="project-img"
 								/>
@@ -241,7 +241,7 @@
 					<p>Instrumentos e interfaces de expressões musicais digitais.</p> <div class="project-grid">
 						<div class="project-item">
 							<div class="project-cover">
-								<img src="assets/placeholder.png" alt="Placeholder image" class="project-img" />
+								<img src="assets/images/placeholder.png" alt="Placeholder image" class="project-img" />
 							</div>
 							<div>
 							<h3>Condusom</h3>
@@ -256,7 +256,7 @@
 						</div>
 						<div class="project-item">
 							<div class="project-cover">
-								<img src="assets/placeholder.png" alt="Placeholder image" class="project-img" />
+								<img src="assets/images/placeholder.png" alt="Placeholder image" class="project-img" />
 							</div>
 							<div>
 							<h3>Do Zero ao Som: Criando Áudio Digital com Python</h3>
@@ -295,6 +295,6 @@
 			</main>
 		</div>
 
-		<script src="main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
