--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<p>Instrumentos e interfaces de expressões musicais digitais.</p> <div class="project-grid">
 						<div class="project-item">
 							<div class="project-cover">
-								<img src="assets/images/placeholder.png" alt="Placeholder image" class="project-img" />
+								<div class="placeholder-canvas"></div>
 							</div>
 							<div>
 							<h3>Condusom</h3>
@@ -171,7 +171,7 @@
 						</div>
 						<div class="project-item">
 							<div class="project-cover">
-								<img src="assets/images/placeholder.png" alt="Placeholder image" class="project-img" />
+								<div class="placeholder-canvas"></div>
 							</div>
 							<div>
 							<h3>Do Zero ao Som: Criando Áudio Digital com Python</h3>
@@ -218,6 +218,7 @@
 				console.log('Navigate to section:', sectionId);
 			});
 		</script>
+		<script src="js/placeholder.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
