add attribution for artwork in music section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 									Violão de nylon solo capturado com um simples microfone dinâmico.
                                     Processado com síntese granular.
                                     <br>
+									Arte feita por <a href="https://www.instagram.com/gigileonardi/" target="_blank" rel="noopener">@gigileonardi</a>.
+                                    <br>
                                     Ouça pelo <a href="https://on.soundcloud.com/mMu3KjopwNd7j9r0od" target="_blank" rel="noopener">Soundcloud</a>.
 								</p>
 							</div>
